# richreps-timecat

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh  supervised.py  top1acc_final.sh  top1acc_sofar.sh
configs/: pretrained_checkpoints.yaml
scripts/supervised_transfer/imagenet/to_cifar/linear_probing/: cat_cifar_sf.sh  run_cifar_sf.sh
scripts/supervised_transfer/imagenet/to_imagenet1k/linear_probing/: cat_imagenet_sf.sh  run_imagenet_sf.sh
scripts/supervised_transfer/imagenet/to_inat18/linear_probing/: cat_inat_sf.sh  run_inat_sf.sh
src/: configs.py  custom_eval.py  custom_loss.py  datasets.py  logger.py  models.py  resnet_cifar.py  utils.py
tools/: download.sh
