[project]
name = "mixture-richreps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "pyyaml==6.0",
    "classy-vision==0.6.0",
    "gdown>=5.2.0",
    "pandas",
    "scipy",
    "ml_collections",
    "wilds",
]
